# procStop

./: Dockerfile.nginx  Dockerfile.php  README.md  docker-compose.yml  site.conf
procStop-client/: Cargo.toml
procStop-client/src/: args.rs  bkink_test.rs  components.rs  conf.rs  config.toml  db.rs  inputs.rs  lcd_1602.rs  led.rs  lib.rs  main.rs  progress_bar.rs  tm1637_additions.rs  utils.rs
resources/: database.txt  database_relation.dia
web/: add_tasks.php  database.sqlite3  index.html  index.php  main.js  new_day.php  stats.php  view_tasks.php
web/css/: main.css
web/js/: main.js
web/php/: add_tasks.php  add_tasks_backend.php  ajax_delete_task.php  ajax_get_stats.php  ajax_get_tasks.php
