[package]
name = "procStop-client"
version = "0.1.0"
authors = ["Phil <ph-ketteni@t-online.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gpio-cdev = "0.4"
tm1637-gpio-driver = "2.0"
chrono = "0.4"
rusqlite = "0.24"
toml = "0.5"
serde = { version = "1.0", features = ["derive"] }
