[package]
name = "procstop-client"
version = "0.3.2"
authors = ["Phil <phil0x2e@posteo.org>"]
edition = "2021"
license-file = '../LICENSE'
license = 'GPL-3.0-or-later'

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gpio-cdev = "0.5"
tm1637-gpio-driver = "2.0"
chrono = "0.4"
rusqlite = "0.26"
toml = "0.5"
serde = { version = "1.0", features = ["derive"] }
clap = {version = "3.0", features = ["cargo"] }
shellexpand = "2.1"
